# newcas-danial-2026

./: .gitignore  .~lock.NEWCAS_ScoreShaping_TALK_15min.pdf#  README.md  build_interactive_deck.py  build_plots.py  build_talk_plots.py  main.py  pyproject.toml  restructure_deck.py  score_shaping.py  score_shaping_plots.ipynb
.claude/: settings.json
data/: de_linear.csv  de_linear_top100.csv  de_sigmoid.csv  de_sigmoid_top100.csv  lhs_baseline_top100.csv  scores_de_linear.csv  scores_de_sigmoid.csv
presentation/: .~lock.NEWCAS_ScoreShaping_VENUE.pdf#  NEWCAS_ScoreShaping_VENUE.pptx  TALK_OUTLINE.md  lu4710b29.tmp
