[project]
name = "newcas-danial-2026"
version = "0.1.0"
description = "Demo files for IEEE NEWCAS 2026 conference"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "plotly",
    "ipykernel",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "kaleido>=1.3.0",
]
